Fix navbar on mobile via .navbar-container-inner

--- a/NMWeb/src/app/core/navbar/navbar.component.scss
+++ b/NMWeb/src/app/core/navbar/navbar.component.scss
@@ -17,6 +17,9 @@
 
 }
 .navbar-container-mobile{
+    .navbar-container-inner {
+      display: flex
+    }
     user-select: none;
     position: fixed;
     left: 0px;
